--- a/app/src/main/res/drawable-v24/edittxt_corner.xml
+++ b/app/src/main/res/drawable-v24/edittxt_corner.xml
@@ -1,23 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle">
 
-    <solid
-        android:color="#eaeaea" >
-    </solid>
+    <solid android:color="#eaeaea"/>
 
-    <corners
-        android:radius="5dp">
-    </corners>
+    <corners android:radius="5dp"/>
 
     <stroke
-        android:color="#5e5e5e"
-        android:width="2dp">
-    </stroke>
-
-    <padding
-        android:left="5dp"
-        android:right="5dp"
-        android:bottom="5dp"
-        android:top="5dp"></padding>
+        android:width="2dp"
+        android:color="#5e5e5e"/>
 </shape>
