--- a/app/src/main/res/layout/item_subtask.xml
+++ b/app/src/main/res/layout/item_subtask.xml
@@ -16,18 +16,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/medium_dimen"
-            android:text="Subtask Name"
+            android:text="@string/example"
             android:textSize="@dimen/task_txt_size" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/gray1" />
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:background="@drawable/shape_btn_task"-->
-        <!--android:orientation="horizontal">-->
+
 
         <TextView
             android:id="@+id/tv_subtask_status"
