--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -3,15 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <!--<group android:checkableBehavior="single">-->
-        <!--<item-->
-            <!--android:id="@+id/nav_settings"-->
-            <!--android:icon="@drawable/settings_icon"-->
-            <!--android:title="Settings" />-->
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/settings_icon"
+            android:title="@string/logout" />
         <!--<item-->
             <!--android:id="@+id/nav_help"-->
             <!--android:icon="@drawable/help_icon"-->
             <!--android:title="Help" />-->
 
-    <!--</group>-->
+    </group>
 </menu>
